# practice-c

./: .gitignore  CMakeLists.txt  README.md  buffer.md
prj1/: CMakeLists.txt  main.c
prj10/: .gitignore  CMakeLists.txt  Makefile  main.c
prj11/: CMakeLists.txt  main.c
prj12/: CMakeLists.txt  main.c
prj13/: CMakeLists.txt  README.md  fgetc.c  index.html  open.c  read.c  ungetc.c  ungetc2.c  write.c
prj2/: CMakeLists.txt  func.c  func.h  main.c
prj3/: CMakeLists.txt  main.c
prj4/: CMakeLists.txt  main.c  vector.c  vector.h
prj5/: CMakeLists.txt  main.c
prj6/: CMakeLists.txt  main.c
prj7/: CMakeLists.txt  main.c
prj8/: CMakeLists.txt  main.c
prj9/: CMakeLists.txt  main  main.c
prj9/main.dSYM/Contents/Resources/DWARF/: main
prj9/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: CMakeLists.txt  README.md  main.c
