cmake_minimum_required(VERSION 3.22)

project(c-practice LANGUAGES C)
set(CMAKE_C_STANDARD 99)


add_subdirectory(prj1)
add_subdirectory(prj2)
add_subdirectory(prj3)
add_subdirectory(prj4)
add_subdirectory(prj5)
add_subdirectory(prj6)
add_subdirectory(prj7)
add_subdirectory(prj8)
add_subdirectory(prj9)
add_subdirectory(prj10)
add_subdirectory(prj11)
add_subdirectory(prj12)
add_subdirectory(prj13)
